# CODEM

./: .gitignore  .pre-commit-config.yaml  dockerfile  environment.yml  pyproject.toml  readme.md  setup.py  spec-file-arcgis-29.txt  spec-file.txt
.github/workflows/: main.yaml  publish.yaml
arcgis/: 3D Data Co-Registration.Register_DEM2DEM.pyt.xml  3D Data Co-Registration.Register_MultiType.pyt.xml  3D Data Co-Registration.pyt  3D Data Co-Registration.pyt.xml  Default.tbx
arcgispro/: 3D Data Co-Registration.Register_MultiType.pyt.xml  3D Data Co-Registration.Volumetric_Change_Detection.pyt.xml  3D Data Co-Registration.pyt  3D Data Co-Registration.pyt.xml  README.md  spec-file-arcgis-29.txt  spec-file-arcgis-30.txt  spec-file.txt
arcgispro/src/: readme.md  setup.py
arcgispro/src/coregister/esri/arcpy/: 3D Data Co-Registration.py
arcgispro/src/coregister/esri/help/gp/: 3d_registration_toolbox.xml  Register_DEM2DEM_3d_registration.xml  Register_MultiType_3d_registration.xml
arcgispro/src/coregister/esri/toolboxes/: 3D Data Co-Registration.Register_DEM2DEM.pyt.xml  3D Data Co-Registration.pyt  3D Data Co-Registration.pyt.xml
demo/: AOI-DigitalSurfaceModel.tif
docs/: configuration.md  details.md  example.md
src/codem/: __init__.py  main.py
src/codem/lib/: console.py  log.py  progress.py  resources.py
src/codem/preprocessing/: __init__.py  preprocess.py
src/codem/registration/: ApplyRegistration.py  DsmRegistration.py  IcpRegistration.py  __init__.py  apply.py  dsm.py  icp.py
src/modem/: __init__.py  main.py
src/modem/lib/: log.py  resources.py
src/modem/preprocessing/: preprocess.py
src/modem/registration/: ApplyRegistration.py  DsmRegistration.py  IcpRegistration.py
src/vcd/: __init__.py  main.py
src/vcd/differencing/: difference.py
src/vcd/meshing/: mesh.py
src/vcd/preprocessing/: __init__.py  preprocess.py
tests/: conftest.py  point_cloud.py  raster.py  test_pc_registration.py  test_registration.py
tests/data/: 0_smallfnd.tif  1_smallAOI.tif  dem.tif  pc.laz  pipeline.json
tests/data/aoi_shapefile/: aoi.dbf  aoi.prj  aoi.sbn  aoi.sbx  aoi.shp  aoi.shx
tests/vcd/: make-laz.sh
(+1 files in other folders)
