[project]
name = "codem"
requires-python = ">=3.7"
description = "A package for co-registering geospatial data"
readme = "readme.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Preston Hartzell", email = "pjhartzell@uh.edu"},
  { name = "Jesse Shanahan" },
  { name = "Bahirah Adewunmi" }
]
maintainers = [
    { name = "Ognyan Moore", email = "ogi@hobu.co" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "typing-extensions"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/NCALM-UH/CODEM"
repository = "https://github.com/NCALM-UH/CODEM"

[tool.setuptools]
package-dir = {"" =  "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "codem.__version__" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
codem = "codem.main:main"
vcd = "vcd.main:main"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.py(i|t)?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv*
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = 3.7
warn_return_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  "cv2",
  "enlighten",
  "matplotlib",
  "matplotlib.pyplot",
  "matplotlib.tri",
  "pandas",
  "pdal",
  "pyproj",
  "pyproj.aoi",
  "pyproj.crs",
  "pyproj.database",
  "pyproj.enums",
  "rasterio",
  "rasterio.crs",
  "rasterio.enums",
  "rasterio.fill",
  "rich.console",
  "rich.logging",
  "rich.progress",
  "scipy",
  "scipy.sparse",
  "scipy.spatial",
  "shapefile",
  "skimage",
  "skimage.measure",
  "trimesh",
]
ignore_missing_imports = true
